--- a/fclock.html
+++ b/fclock.html
@@ -19,9 +19,9 @@
             width:312px;
             height:208px;
             background-color:#000;
-            margin-top:52px;
-            margin-left:-52px;
-            transform: rotate(270deg)
+           // margin-top:52px;
+           // margin-left:-52px;
+           // transform: rotate(270deg)
         }
         
         #eventName{
